--- a/css/thepaperpetalstyles.css
+++ b/css/thepaperpetalstyles.css
@@ -32,6 +32,8 @@ a {
 	margin-top: 20px;
 	background-color: #A7A2B3;
 	border-radius: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .container .paper-heading {
